--- a/ru/how_to_use/index.html
+++ b/ru/how_to_use/index.html
@@ -44,13 +44,18 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <a class="close-navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    </a>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container nav-container">
         <div class="navbar-brand">
           <a href="../../">
             <img src="../../img/64px-AdygheFlag.png" class="mr-3" style="opacity: 0.8">
           </a>
         </div>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-dark navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -229,7 +234,7 @@
               </div>
             </div>
 
-            <!-- <div class="card mt-3 border-light">
+            <div class="card mt-3 border-light">
                 <div class="card-header border-0" id="headingFAQ">
                   <h5 class="mb-0">
                       <button class="btn btn-link text-dark w-100 text-left collapsed" data-toggle="collapse" data-target="#collapseFAQ" aria-expanded="false" aria-controls="collapseFAQ">Часто задаваемые вопросы</button>
@@ -255,9 +260,9 @@
                   </div>
                 </div>
               </div>
-            </div> -->
+            </div>
 
-            <div id="about_corpora">
+            <!-- <div id="about_corpora">
               <h2 class="mt-4">Часто задаваемые вопросы</h2>
 
               <p><em>&mdash; Что такое корпус?</em></p>
@@ -274,7 +279,7 @@
 
               <p><em>&mdash; Что такое морфологическая разметка и как она сделана?</em></p>
               <p>В представленном здесь корпусе имеется лемматизация и морфологическая разметка. <em>Лемматизация</em> означает, что при каждой словоформе указана её <em>лемма</em>, то есть начальная форма. Морфологическая разметка означает, что для каждой словоформы указаны её грамматические характеристики: часть речи, число, падеж, время и т.&nbsp;п. Поскольку этот корпус слишком большой, чтобы размечать его вручную, разметка делалась автоматически при помощи специальной программы &mdash; морфологического анализатора. Анализатор, в свою очередь, использует составленный вручную грамматический словарь и формализованное описание адыгейского словоизменения. Использование автоматической разметки, к сожалению, означает, что, во-первых, отсутствующие в словаре слова останутся неразобранными, а во-вторых, что в некоторых случаях возникнет омонимия &mdash; ситуация, когда одно слово можно разобрать несколькими способами, и программа не знает, какой из вариантов является правильным в данном контексте.</p>
-            </div>
+            </div> -->
 
           </div>
 
