--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 
   <body id="page-top">
 
+
+
     <!-- Navigation -->
+    <a class="close-navbar-toggler collapsed" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    </a>
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container nav-container">
         <div class="navbar-brand">
